--- a/client/src/components/Left/Left.module.css
+++ b/client/src/components/Left/Left.module.css
@@ -6,7 +6,7 @@
 }
 
 .Logo {
-  margin: 0.7rem 0 1rem 0;
+  margin: 0;
   font-family: 'Monoton', cursive;
   font-weight: 100;
   text-align: center;
