--- a/client/src/components/Modals/SavedEvent.module.css
+++ b/client/src/components/Modals/SavedEvent.module.css
@@ -7,7 +7,7 @@
 }
 
 .savedEventContainer {
-  width: 440px;
+  width: 36vw;
   border: 3px solid var(--black);
   padding: 0.5em;
   max-height: 50%;
@@ -17,7 +17,7 @@
 } 
 
 .attendingEventContainer {
-  width: 440px;
+  width: 36vw;
   border: 3px solid var(--black);
   padding: 0.5em;
   height: 210px;
